# Zygisk-Il2CppDumper

./: CMakeLists.txt  README.md  hack.cpp  il2cpp_dump.cpp  log.h  zygisk.hpp
